add new content on site

--- a/views/home.html
+++ b/views/home.html
@@ -15,8 +15,8 @@
 <div class="container container--center">
 
     <div class="panel panel--box">
-        <h1>Агентство недвижимости ЗемНедвижимость — крупнейшее в Минске</h1>
-        <p>ЗемНедвижимость — агентство недвижимости, занимающее ведущие позиции на рынке риэлторских услуг. По оценкам экспертов, значительная часть организованных сделок в московском регионе приходится именно на «ЗемНедвижимость», что позволяет нам вот уже многие годы занимать лидирующее место среди агентств недвижимости Минска и Подмосковья.</p>
+        <h1>Агентство ЗемНедвижимость — <br>Самое быстроразвивающееся агентство в Беларуси</h1>
+        <p>«ЗемНедвижимость» — агентство, занимающее обширную часть на рынке риэлтерских услуг. По оценкам экспертов, значительная часть организованных сделок в Минске и Минской области приходиться именно на “ЗемНедвижимлсть”, что позволяет нам вот уже долгое время занимать лидирующее место среди самых перспективных агентств недвижимости Минска.</p>
 
         <ul class="grid text--center list">
             <li class="col--1-5">
@@ -105,9 +105,9 @@
 
 <div class="container container--center">
     <div class="panel panel--box">
-        <h2>Продажа недвижимости в Минске и Подмосковье</h2>
-        <p>Агентство ЗемНедвижимость уже более 20 лет предоставляет риэлторские услуги юридическим и физическим лицам в ключевых сегментах рынка недвижимости: покупка и продажа квартир на первичном и вторичном рынках городского и загородного жилья, аренда квартир, а также проводим сделки с коммерческой недвижимостью. Жилая и коммерческая недвижимость Минска и Минской области представлена в нашем каталоге в самом полном объеме, в наличии есть множество вариантов жилья различного типа, предоставляемого как с помощью риэлторов, так и без посредников.</p>
-        <p>Мы оказываем риэлторские услуги по аренде и продаже недвижимости во всех сегментах. С помощью наших специалистов вы сможете купить элитную недвижимость в Минске и Подмосковье, а также приобрести жилье эконом класса. В нашей базе недвижимости, содержащей огромное количество предложений, найдутся как эксклюзивные квартиры, так и бюджетные варианты, а также большое количество загородного жилья всех категорий. Специалисты нашего агентства помогут в подборе оптимального для вас варианта и оформят сделку по <nobr>купле продаже</nobr> недвижимости максимально надежно и быстро!</p>
+        <h2>Продажа недвижимости в Минске и областях</h2>
+        <p>Агентство ЗемНедвижимость на высоком и профессиональном уровне  предоставляет риэлтерские услуги физическим и юридическим лицам  в основных сегментах рынка недвижимости Беларуси: покупка и продажа квартир в новостройках и на вторичном рынке, покупка и продажа загородной недвижимости, покупка и продажа коммерческих объектов, аренда квартир, аренда домов и коттеджей, аренда коммерческой недвижимости. В нашем каталоге имеется самая разнообразная недвижимость Минска и областей Беларуси от бюджетной до элитной.</p>
+        <p>С помощью нас вы сможете купить элитную недвижимость в Минске и областях, а также приобрести жилье в бюджетном сегменте. В нашем агентстве, находится огромное количество предложений в продажу так и в аренду, а также большое количество загородных домов, коттеджей, складов, офисов и т.д. Наши агенты и риэлторы помогут вам в подборе лучшего для вас варианта и оформят сделку  максимально качественно и быстро!</p>
 
         <h2>Каталог объектов</h2>
         <p>Для получения информации по нашей базе недвижимости выберите подходящий тип объекта и нажмите «Найти».</p>
