--- a/views/jobs/training-center.html
+++ b/views/jobs/training-center.html
@@ -7,33 +7,31 @@
     <div class="grid">
         <div class="col--3-4">
             <h1>Учебный центр</h1>
-            <p>Залогом успеха любой компании является профессионализм работы ее сотрудников. Специально созданный Учебный центр ЗемНедвижимостьа обучает новичков профессии риэлтор, а также помогает сотрудникам повысить свою квалификацию и развить навыки, необходимые для профессионального успеха.</p>
+            <p>Залогом успеха нашей компании является профессионализм работы ее сотрудников.  Учебный центр компании обучает новичков, а также помогает будущим сотрудникам повысить  квалификацию и развить навыки, необходимые для профессионального успеха.</p>
 
-            <h2 class="text--h3 margin--v">Специализированные учебные программы</h2>
-            <p>Специализированные учебные программы разработаны для Управления вторичного рынка, Управления аренды, Департамента загородной недвижимости, Департамента новостроек и других подразделений Компании.</p>
+            <h2 class="text--h3 margin--v">Учебные программы</h2>
+            <p>Специализированные учебные программы созданы на многолетнем опыте руководителей компании.</p>
 
             <ul class="list list--dashed text--italic">
-                <li><span>Очные лекции, семинары, инструктажи, практикумы, тренинги, круглые столы,</span></li>
-                <li><span>Более 80 учебных программ,</span></li>
-                <li><span>Максимальная практичность и конкретность обучения,</span></li>
-                <li><span>Учебные пособия, учебные видео и электронная библиотека,</span></li>
-                <li><span>Постоянное развитие при поддержке руководителя и наставника,</span></li>
-                <li><span>Обучение за счет Компании.</span></li>
+                <li><span>Очные лекции, семинары, инструктажи, тренинги,</span></li>
+                <li><span>Максимальная скорость и конкретность обучения,</span></li>
+                <li><span>Постоянная поддержка руководителя и наставника,</span></li>
+                <li><span>Обучение за счет Компании</span></li>
             </ul>
 
-            <p>Система подготовки всех категорий сотрудников: стажеров, экспертов, начальников отделов, руководителей отделений, которые повышают свою квалификацию в соответствующих краткосрочных и долгосрочных программах. Каждый сотрудник Компании ЗемНедвижимость имеет право и возможность ежегодно повышать свою квалификацию и развивать профессиональное мастерство!</p>
+            <p>Система обучения всех категорий сотрудников: стажеров, экспертов, начальников отделов, руководителей отделений, которые повышают свою квалификацию.Каждый сотрудник Компании ЗемНедвижимость имеет право и возможность повышать свою квалификацию и развивать профессиональное мастерство!</p>
 
-            <h2 class="margin--top-large">Система обучения сотрудников Компании</h2>
+            <h2 class="margin--top-large">Обучение сотрудников Компании</h2>
             <p>В Компании есть следующие виды обучения:</p>
 
             <ul class="list list--dashed text--italic">
                 <li><span>первичное профессиональное обучение,</span></li>
-                <li><span>повышение квалификации в соответствии с квалификационными требованиями и стратегическими целями компании,</span></li>
-                <li><span>подготовка кадрового резерва, развитие личной эффективности (выработка профессиональной позиции и изменение установок) сотрудников.</span></li>
+                <li><span>повышение квалификации,</span></li>
+                <li><span>подготовка, развитие личной эффективности</span></li>
             </ul>
 
-            <p>Идея подготовки кадров «своими силами» успешно реализуется в Компании на практике: сотни стажеров, освоив курс лекций в Учебном центре, эффективно трудятся в компании, плечом к плечу с бывшими наставниками.</p>
-            <p>Ежегодно в Учебном центре Компании проходят обучение и стажировку более 9000 сотрудников. Именно это позволяет сотрудникам ЗемНедвижимостьа безошибочно проводить сложные операции на рынке недвижимости и поддерживать высокий имидж Компании.</p>
+            <p>Идея подготовки сотрудников «своими силами» успешно реализуется на практике: десятки стажеров, освоив обучение, успешно трудятся в компании, плечом к плечу с наставниками.</p>
+            <p>Ежегодно в Компании проходят обучение и стажировку более сотни сотрудников. Именно это позволяет безошибочно проводить сложные сделки на рынке недвижимости и поддерживать высокий уровень Компании.</p>
         </div>
         <div class="col--1-4">
 
