--- a/views/jobs/vacancy.html
+++ b/views/jobs/vacancy.html
@@ -6,17 +6,17 @@
 
     <div class="grid grid--small">
         <div class="col--3-4">
-            <h1 class="margin--bottom">Работа в ЗемНедвижимость</h1>
+            <h1 class="margin--bottom">Работа в Компании ЗемНедвижимость</h1>
 
-            <p>Ищете интересную работу? Вы готовы получать новые знания и опыт, а также открыты для общения с новыми, интересными людьми?</p>
-            <p>ЗемНедвижимость — стабильная и успешная компания, лидирующая на рынке недвижимости Минска и Минской области, обладатель профессиональных наград, надежный и привлекательный работодатель.</p>
+            <p>Ищете увлекательную работу? Вы готовы получать новые знания и опыт, а также открыты для общения с новыми, интересными людьми?</p>
+            <p>ЗемНедвижимость — перспективная и успешная компания на рынке недвижимости Минска и областей Республики Беларусь, надежный и привлекательный работодатель.</p>
 
             <h3 class="margin--v">Почему работа в ЗемНедвижимость?</h3>
 
             <ol class="text--italic">
-                <li>Работа в крупнейшем и надежном агентстве недвижимости;</li>
+                <li>Работа в одном из крупнейших и надежных агентств недвижимости;</li>
                 <li>Уникальная технология успешных продаж и гарантия высокого дохода;</li>
-                <li>Работа риэлтором — это всегда востребованная профессия!</li>
+                <li>Работа агентом — это всегда востребованная профессия!</li>
             </ol>
 
             <h2 class="margin--top-large">Вакансии</h2>
@@ -24,15 +24,15 @@
                 <li><a href="#/">Агент (риэлтор) по работе на вторичном рынке жилья</a></li>
                 <li><a href="#/">Агент (риэлтор) по загородной недвижимости</a></li>
                 <li><a href="#/">Агент (риэлтор) в подразделения аренды</a></li>
-                <li><a href="#/"> Менеджер по продажам</a></li>
-                <li><a href="#/"> Менеджер по продажам новостроек/эксперт</a></li>
-                <li><a href="#/">Менеджер по работе с Коммерческой недвижимостью </a></li>
+                <li><a href="#/">Менеджер по продажам</a></li>
+                <li><a href="#/">Менеджер по продажам новостроек/эксперт</a></li>
+                <li><a href="#/">Менеджер по работе с Коммерческой недвижимостью</a></li>
             </ul>
 
-            <p>Работа в ЗемНедвижимость — это отличная возможность расти и развиваться вместе с компанией, а для молодых специалистов — старт для карьеры. Нам нужны люди, готовые внести свой вклад в компанию и стать ее частью, а мы, в свою очередь, предоставим все условия для профессионального роста, поможем воплотить идеи и подарим уверенность в завтрашнем дне!</p>
+            <p>Работа в ЗемНедвижимости— это отличная возможность развиваться вместе с компанией, а для начинающих специалистов — старт для большой карьеры. Нам нужны кадры, готовые внести вклад и стать частью компании, а мы, предоставим все условия для профессионального и карьерного роста, поможем воплотить идеи и подарим уверенность в завтрашнем дне!</p>
             <p>Работу в агентстве недвижимости можно начать в любом возрасте и построить успешную карьеру.</p>
-            <p>Наша компания заботится о своих сотрудниках, предоставляет профессионально оборудованные рабочие места, удобно расположенные офисы во всех районах Минска, льготное ДМС и посещение фитнес-центров, оформление по ТК РФ, гибкий график работы и достойную оплату труда. Комфортная работа риэлтором — наша задача!</p>
-            <p>Работа в нашем агентстве недвижимости — это большие возможности для карьерного роста! </p>
+            <p>Наша компания заботится о своих сотрудниках, предоставляет организованные рабочие места, удобно расположенные офисы во многих районах  минска, оформление по ТК РБ, гибкий график работы и достойную оплату труда.</p>
+            <p>Работа в нашем агентстве недвижимости — это большие перспективы в карьерном росте!</p>
 
         </div>
         <div class="col--1-4">
@@ -40,8 +40,8 @@
                 <b>Вакансия дня</b>
                 <span class="text">
     				<p class="link--line margin--v">Агент (риэлтор) по работе на вторичном рынке жилья</p>
-    				<p class="text--italic">Офис «Таганское»</p>
-    				<a href="tel:+711111111" class="text--bold">+7 (495) 363-01-60</a>
+    				<p class="text--italic">Офис</p>
+    				<a href="tel:+375293213620" class="text--bold">+375-(29)-321-36-20</a>
     			</span>
             </div>
 
