--- a/views/sale-realty/flats.html
+++ b/views/sale-realty/flats.html
@@ -124,8 +124,8 @@
             <div class="margin--top">
                 <h2>Купить квартиру в Минске</h2>
 
-                <p>В столице большой выбор жилья на продажу, но остановиться на конкретном варианте зачастую не так просто. Не каждая квартира соответствует требованиям. Самостоятельные поиски приводят к тому, что купить квартиру в Минске становится невероятно сложно. Процесс покупки затягивается надолго, ведь кроме подбора уютного жилья нужно собрать различные справки, подготовить, заверить документы. Рекомендуем сразу же обращаться к опытным и подготовленным профессионалам. Мечтаете купить квартиру в Минске на вторичном рынке жилья? Наши риелторы к вашим услугам!</p>
-                <p>Также мы оказываем помощь в продаже квартиры в Минске и Подмосковье на вторичном рынке жилья. Мы быстро подберем для вашего предложения заинтересованных покупателей.</p>
+                <p>В столице большой выбор предложений на продажу, но определится с конкретном варианте зачастую не так просто. Не каждая квартира соответствует вашим запросам. Самостоятельные подборы приводят к тому, что приобрести квартиру в Минске становится сложно. Процесс покупки затягивается надолго, ведь кроме подбора вашей будущей квартиры нужно собрать различные справки, выписки, счета, документы. Рекомендуем сразу же обращаться к опытным и подготовленным специалистам нашего агентства. Желаете выгодно приобрести квартиру в Минске на вторичном рынке жилья? Наши агенты и риелторы всегда к вашим услугам!</p>
+                <p>Также мы оказываем быструю помощь в продаже вашей квартиры в Минске и областях Беларуси. Мы быстро подберем для вашей квартиры реальных покупателей.</p>
                 <p>Просмотреть актуальные и самые свежие варианты комнат и квартир Минска вы можете в нашей базе квартир.</p>
 
                 <p class="text--center">
@@ -191,36 +191,34 @@
             </div>
 
             <div class="panel margin--top">
-                <h2>Купить квартиру в Подмосковье</h2>
+                <h2>Купить квартиру в областях Беларуси</h2>
 
-                <p>Немалые проблемы создают поиски квартиры в Подмосковье. Все начинается с подбора подходящего жилья, затем нужно собрать документы, получить разрешение на совершение сделки. Поэтому важно правильно выбрать агентство недвижимости. Единственное, что вам требуется сделать — позвонить специалистам агентства по телефону +7 (495) 363-10-10 или оставить заявку на сайте. Дальше будем действовать мы. С помощью наших услуг вы можете быстро купить квартиру в Подмосковье на вторичном рынке жилья, позабыв про волокиту и хлопоты с документами.</p>
-                <p>Необходимо продать жилье быстро и выгодно? Мы организуем поиски покупателей и осуществим продажу квартиры в Подмосковье на лучших условиях. Уже много лет мы занимаемся продажей квартир в Подмосковье на рынке вторичного жилья, поэтому наша база объектов удовлетворяет пожелания даже взыскательного клиента.</p>
-                <p>Только что поступившие варианты квартир в Подмосковье вы можете просмотреть уже сейчас!</p>
-
+                <p>Немалые проблемы создают поиски квартиры в  других регионах. Все начинается с подбора подходящих вариантов, затем нужно собрать документы, справки, получить разрешение на совершение сделки. Что бы огородить себя от всей волокиты и прочих моментов вам требуется сделать — позвонить специалистам агентства по телефону <a href="tel:+375293213620">+375-(29)-321-36-20</a> или оставить заявку на нашем сайте. Дальше все сделаем мы. С помощью нас вы можете быстро купить квартиру, позабыв про волокиту и хлопоты с документами.</p>
+                <p>Необходимо продать недвижимость быстро и выгодно? Мы организуем рекламу и  поиски покупателей и осуществим продажу квартиры на лучших условиях. Уже долгое время мы занимаемся продажей квартир по всей Беларуси на рынке вторичного жилья, поэтому наша база недвижимости удовлетворяет даже самых требовательных клиентов.</p>
+                <p>Только что поступившие варианты квартир в регионах Беларуси вы можете просмотреть уже сейчас!</p>
                 <p class="text--center margin--v-large">
                     <a href="#/" class="button button--medium button--green" title="Предложения квартир в Подмосковье">Предложения квартир в Подмосковье</a>
                 </p>
 
                 <h2>Купить квартиру через ЗемНедвижимость</h2>
-                <p>База квартир и комнат в Минске и Подмосковье состоит более чем из 15 тысяч предложений вторичной недвижимости и новостроек — актуальных и проверенных нашими специалистами.</p>
-                <p>В нашей базе квартир на продажу в Минске и области имеется удобный фильтр, с помощью которого можно отфильтровать жилье по важным для вас критериям и отобрать квартиры с возможностью кредита.</p>
+                <p>Наша база недвижимости квартир в Минске и регионах Беларуси  из нескольких  тысяч предложений вторичной недвижимости и новостроек — актуальных и проверенных нашими специалистами.</p>
+                <p>В нашей базе имеется удобный фильтр отбора, с помощью которого можно подобрать недвижимость по важным для вас критериям.</p>
 
                 <h2>Преимущества покупки жилья через ЗемНедвижимость:</h2>
 
                 <ol class="list list--number">
-                    <li><div class="circle">1</div>Консультация с ведущими специалистами по недвижимости</li>
-                    <li><div class="circle">2</div>Подбор вторичной квартиры, комнаты или новостройки по всем закрытым базам Минска и области</li>
-                    <li><div class="circle">3</div>Определение рыночной стоимости квартиры и торг с продавцом</li>
-                    <li><div class="circle">4</div>Защита ваших интересов на всех этапах сделки</li>
+                    <li><div class="circle">1</div>Консультация с опытными юристами и риэлторами по недвижимости</li>
+                    <li><div class="circle">2</div>Подбор встречного варианта – новостройки, квартиры, комнаты или дома по всем базам Минска. </li>
+                    <li><div class="circle">3</div>Определение рентабельной стоимости квартиры</li>
+                    <li><div class="circle">4</div>Защита ваших прав и интересов на всех этапах сделки</li>
                     <li><div class="circle">5</div>Юридическая проверка квартиры, организация и проведение сделки купли-продажи</li>
                     <li><div class="circle">6</div>Передача квартиры от продавца к покупателю, оформление акта сдачи-приемки</li>
-                    <li><div class="circle">7</div>Скидки на % ставку по ипотеке</li>
                 </ol>
             </div>
 
-            <p>Если у вас возникли вопросы, обращайтесь к специалистам ЗемНедвижимость. Работая с нами, Вы всегда можете рассчитывать на удобные условия сотрудничества, безопасность сделки и внимательное отношение.</p>
+            <p>Если у вас возникли вопросы, обращайтесь к нашим специалистам АН “ЗемНедвижимость”. Работая с нами, Вы всегда можете рассчитывать на быстрый результат и безопасность сделки.</p>
 
-            <h2 class="margin--v">Бесплатные консультации экспертов ЗемНедвижимость</h2>
+            <h2 class="margin--v">Бесплатные консультации экспертов ЗемНедвижимость.</h2>
 
             <div class="panel panel--white panel--box">
                 <ul class="question-board">
