--- a/views/sale-realty/prodazha-domov-kottedzhej.html
+++ b/views/sale-realty/prodazha-domov-kottedzhej.html
@@ -4,7 +4,7 @@
         <li><span>Недвижимость</span></li>
     </ul>
 
-    <h1>Продажа домов, коттеджей в Подмосковье</h1>
+    <h1>Продажа домов, коттеджей</h1>
 
     <div data-ng-include="'/views/component/filter.html'"></div>
 
@@ -24,7 +24,7 @@
         </li>
     </ul>
 
-    <h3 class="margin--v">Загородная недвижимость Подмосковья</h3>
+    <h3 class="margin--v">Загородная недвижимость</h3>
 
     <div data-ng-include="'/views/component/list-doma.html'"></div>
 
@@ -46,20 +46,20 @@
         </div>
     </div>
 
-    <h2 class="margin--v">Коттеджи и загородные дома в Подмосковье</h2>
+    <h2 class="margin--v">Коттеджи и загородные дома в Минске и областях</h2>
 
-    <p>Для того, чтобы купить коттедж в Подмосковье либо загородный дом, придется потратить много  времени и сил, ведь хочется приобрести загородную недвижимость, полностью соответствующую не только представлениям об идеальном загородном доме, но и финансовым возможностям.</p>
-    <p>Сделать это с минимальными усилиями можно лишь обратившись в проверенное и надежное агентство, такое, как ЗемНедвижимость. В нашей базе недвижимости более 10 тысяч объектов различной ценовой категории, расположенных на всех направлениях Подмосковья как неподалеку, так и в удалении от столицы. Выбор очень широк, поэтому у нас можно без проблем подобрать и купить коттедж эконом-класса под ключ либо элитный коттедж.</p>
-    <p>При подборе вариантов недвижимости эконом- или бизнес-класса в Подмосковье мы учитываем все ваши предпочтения (местоположение, стоимость загородного жилья, инфраструктура и даже экологическая обстановка). Конечно, купить дом в ближнем Подмосковье дешево не так просто. Однако наша компания может предложить недорогие цены на продажу загородного дома в Подмосковье.</p>
-    <p>В результате, вы с минимальными усилиями получаете свой вожделенный коттедж под ключ по выгодной цене!</p>
+    <p>Для того, чтобы приобрести коттедж в Минской области либо загородный дом, приходиться потратить очень много времени, нервных клеток и сил, ведь хочется приобрести дом, полностью соответствующую не только представлениям об идеальном загородном доме, но и финансовым возможностям.</p>
+    <p>Сделать это с минимальными усилиями и максимальным результатом можно лишь обратившись к специалистам ЗемНедвижимость. В нашей базе несколько тысяч объектов различной ценовой категории, расположенных на всей территории Республики Беларусь. Выбор очень широк, поэтому мы можем без проблем подобрать и помочь купить коттедж эконом-класса либо элитный коттедж.</p>
+    <p>При подборе вариантов недвижимости эконом- или VIP-класса мы учитываем все ваши пожелания (местоположение, стоимость, инфраструктура и даже экологическая обстановка). Конечно, купить дом дешево не так просто. Однако наша компания может предложить выгодные цены на продажу загородного дома или участка.</p>
+    <p>В результате, вы с минимальными усилиями получаете свой идеальный вариант под ключ по самой выгодной цене!</p>
 
-    <h3 class="margin--v">Купить загородную недвижимость лучше в ЗемНедвижимость!</h3>
-    <p>С нашей помощью вы купите новый дом или коттедж в Подмосковье максимально выгодно в любом удобном для вас районе, а ведь купить коттедж в Подмосковье недорого – мечта любого желающего приобрести загородную недвижимость для отдыха или постоянного проживания.</p>
-    <p>Обратившись за содействием в ЗемНедвижимость с целью, например, купить загородный дом в Подмосковье под ключ, вы получаете доступ к одной из наиболее полных баз объектов загородной недвижимости, включающей практически все актуальные на сегодняшний день ценовые предложения по продаже домов и коттеджей в ближнем Подмосковье как варианты эконом-класса, так и элитные дома. Причем купить коттедж в Подмосковье вы сможете очень недорого.</p>
+    <h3 class="margin--v">Купить загородную недвижимость лучше в компании ЗемНедвижимость</h3>
+    <p>С нашей помощью вы приобретете новый дом или коттедж в любой точке Беларуси максимально выгодно, а ведь купить коттедж недалеко от столицы – мечта любого желающего для отдыха или постоянного проживания.</p>
+    <p>Обратившись за помощью в ЗемНедвижимость с целью, например, купить загородный дом в Любой Области под ключ, вы получаете доступ к самой полной базы объектов загородной недвижимости, включающей все актуальные на сегодняшний день предложения по продаже домов и коттеджей в любых районная Беларуси как варианты эконом-класса, так и элитные дома. Причем купить коттедж вы сможете очень недорого.</p>
 
-    <h3 class="margin--v">Выбор домов и коттеджей по шоссе</h3>
-    <p>Сориентироваться в море предложений и сделать правильный выбор вам помогут наши эксперты – специалисты агентства недвижимости ЗемНедвижимость. Они предложат объекты, расположенные во всех районах Подмосковья, и в зависимости от ваших приоритетов наиболее удобные варианты подъезда.</p>
-    <p>Мы поможем купить готовый дом в Минской области недорого, в максимально сжатые сроки и решим все вопросы, связанные с оформлением сделки. Кроме того, мы возьмем на себя все заботы по оформлению и сопровождению продажи загородного дома или коттеджа в Минской области!</p>
-    <p>Покупать и продавать недвижимость с нами просто, легко и максимально выгодно!</p>
+    <h3 class="margin--v">Выбор домов и коттеджей по ключевым трассам</h3>
+    <p>Сориентироваться в огромном количестве предложений и сделать правильный выбор вам помогут наши специалисты компании ЗемНедвижимость. Они предложат варианты, расположенные во всех районах Беларуси, и в зависимости от ваших требований - наиболее подходящие.</p>
+    <p>Мы поможем купить готовый дом в Минском районе недорого, и максимально быстро решим все вопросы, связанные с переоформлением объекта недвижимости. Кроме того, мы возьмем на себя все моменты по сопровождению продажи загородного дома или коттеджа в Минской области!</p>
+    <p>Покупать и продавать недвижимость с нами просто, легко, быстро и максимально выгодно!</p>
 
 </div>
