--- a/views/rent-realty/flats.html
+++ b/views/rent-realty/flats.html
@@ -47,14 +47,13 @@
                 <a href="#/" class="button button--medium button--green">Все дешевые квартиры в Минске</a>
             </div>
 
-            <h2 class="margin--v">К вопросу об аренде квартир в Минске</h2>
+            <h2 class="margin--v">Аренда квартир в Минске</h2>
 
-            <p>Везунчик тот, кому никогда не приходилось искать съемное жилье для себя или своего семейства хотя бы на полгода. Вопросом, как снять квартиру в Минске, озадачивались многие из нас. Вариант, чтобы дешево, с хорошей транспортной развязкой, с ремонтом, да при этом без попадания на ухищрения мошенников, кажется слегка фантастическим.</p>
-            <p>Существует множество подводных камней при поиске жилья по объявлениям. Наниматель может наткнуться на недобросовестных хозяев, на проблемы с участковым, всевозможные недопонимания от собственников в области посещений, замков, порчи имущества, мелкого ремонта <nobr>и т. п.</nobr></p>
-            <p>Если учитывать все неприятные моменты, которые могут постигнуть будущего квартиранта, рискнувшего самостоятельно найти себе квадратные метры, приходит понимание того, что услуги агентства в таком вопросе, как аренда квартир, просто необходимость. Да и стоят совсем недорого по сравнению с возможными потерями.</p>
+            <p>Повезло тому, кто никогда не искал съемное жилье для себя или своего семейства хотя бы на полгода. Проблемой, как снять квартиру в Минске, сталкивались многие из нас. Вариант, чтобы дешево, возле метро, с ремонтом, с полным наличием новой мебели и бытовой техники, кажется слегка фантастическим.</p>
+            <p>Существует множество непредсказуемых подводных камней при поиске жилья по объявлениям в интернете. Квартирант может найти недобросовестных собственников, всевозможные недопонимания в области посещений, замков, порчи имущества, мелкого ремонта и т. п.</p>
+            <p>Если взять все неприятные моменты, которые могут постигнуть будущего квартиросъемщика, рискнувшего самостоятельно найти себе квартиру, приходит понимание того, что услуги агентства в таком вопросе, как аренда квартир, просто необходимость. Да и стоят совсем недорого по сравнению с потерями.</p>
 
-
-            <h3 class="text--h4 margin--top">Предложения по типам квартир</h3>
+            <h3 class="text--h4 margin--top">Предложения квартир в аренду</h3>
             <div class="grid grid-col--1-3">
                 <ul class="list">
                     <li><i><a class="link link--line" href="/sale-realty/flats/prodazha-kvartir-gorod-moskva/?or=Y">Комнаты</a></i></li>
@@ -81,15 +80,12 @@
 
 
             <h2 class="margin--v">Как снять квартиру в Минске без проблем</h2>
-            <p>Проблема, как снять желаемую квартиру, перестанет пугать, если к ее решению подключить профессионалов. Выбирая агентство недвижимости, стоит обратить внимание на историю работы и отзывы от клиентов. Несомненно, уровень цены на услуги важен, но еще важнее репутация.</p>
-            <p>Для нашего агентства с <nobr>20-летним</nobr> стажем аренда квартир, как направление деятельности, стало одним из важнейших. Задача сотрудников компании ЗемНедвижимость — максимально упростить процесс подбора и учесть все пожелания будущего квартиросъемщика. Также мы поможем избежать всех трений и разногласий в будущем, исходящих, как от собственников, так и от временных жильцов.</p>
-            <p>Сегодня совместная работа с агентством ЗемНедвижимость дает возможность учитывать все требования нанимателя:</p>
+            <p>Проблема, как снять подходящую квартиру, перестанет пугать, если к ее поиску подключить специалистов. Для нашего агентства большим стажем аренды квартир, как направление деятельности, стало одним из ключевых. Задача агентов компании ЗемНедвижимость — максимально ускорить процесс подбора и учесть все критерии будущего квартиранта. Также мы поможем избежать всех вопросов и разногласий, исходящих от собственников.</p>
 
             <ul class="list list--dashed">
-                <li>желаемые цены и сроки найма;</li>
-                <li>запрашиваемую категорию (от <nobr>VIP-апартаментов</nobr> до экономжилья);</li>
+                <li>необходимый уровень (от VIP-квартир до эконом-жилья)</li>
                 <li>тип домов (в новостройках, в «сталинках» или в недорогих «хрущевках»);</li>
-                <li>предпочтительный район;</li>
+                <li>необходимый район;</li>
                 <li>прочие пожелания (возможность регистрации, наличие животных и др.)</li>
             </ul>
 
