add content about company

--- a/views/company/company.html
+++ b/views/company/company.html
@@ -8,21 +8,15 @@
         <div class="col--3-4">
             <h1 class="margin--bottom">О компании</h1>
 
-            <p>Сегодня ЗемНедвижимость — это ведущая риэлторская компания страны и один из крупнейших инвестиционно-девелоперских холдингов полного цикла, в работе которого заняты тысячи человек. Деятельность компании сосредоточена на двух направлениях: оказание риэлторских услуг в столичном регионе и создание малоэтажных жилых комплексов в ближайшем Подмосковье и городе Красноярск.</p>
-            <p>Согласно рейтингам журналов Forbes и «Финанс», компания ЗемНедвижимость является одной из крупнейших частных компаний России, представленных на рынке отечественной недвижимости. Деятельность компании регулярно отмечается профессиональными и общественными наградами, в частности, компания ЗемНедвижимость стала первым представителем рынка недвижимости, получившим по результатам национального голосования почетный статус «Народная Марка/Марка № 1 в России».</p>
+            <p>Сегодня ЗемНедвижимость — это самая перспективная риэлтерская компания страны, в работе которой заняты больше сотни человек. Деятельность компании сосредоточена в направлении: оказание риэлтерских услуг в столичном регионе.</p>
+            <p>Согласно рейтингам, компания ЗемНедвижимость является одной из успешных и быстроразвивающихся частных компаний нашей республики. Деятельность компании регулярно отмечается профессиональными и общественными отзывами и мнениями.</p>
 
             <h2 class="margin--top-large">Риэлторская деятельность компании</h2>
-            <p>Согласно экспертным оценкам, доля компании ЗемНедвижимость на организованном рынке риэлторских услуг превышает 31,1%, на рынке операций с загородной недвижимостью — 75%, на рынке аренды жилья — 50%.</p>
+            <p>Согласно экспертным оценкам, доля компании ЗемНедвижимость на организованном рынке риэлторских услуг превышает 20%, на рынке операций с загородной недвижимостью — 40%, на рынке аренды жилья — 30%.</p>
 
-            <h2 class="margin--top-large">Доли крупнейших риэлторских агентств</h2>
-            <p><img src="http://www.incom.ru/upload/newincom/diagramma4.jpg" width="339" height="222"></p>
+            <p>Компания ЗемНедвижимость располагает  широкой филиальной сетью среди риэлтерских агентств — более чем 10 полноценных офисов в Минске и региональных представительств. Количество сотрудников, занятых в деятельности компании, насчитывает более сотни человек.</p>
 
-            <p>Компания ЗемНедвижимость располагает самой широкой филиальной сетью среди риэлторских агентств — более чем 40 полноценных офисов в Минске и региональных представительств. Количество сотрудников, занятых в деятельности компании, насчитывает несколько тысяч человек.</p>
-
-            <h2 class="margin--top-large">Деятельность компании в сфере загородного строительства</h2>
-            <p>Первые инвестиционные проекты в области загородной недвижимости группа компаний ЗемНедвижимость начала реализовывать в 2001 году. Для элитного направления был создан отдельный бренд — Villagio Estate. На сегодняшний день в активе группы находится более 20 поселков. Половина проектов уже полностью реализована и введена в эксплуатацию. Работа над элитными комплексами «Миллениум Парк», «Монтевиль», «Мэдисон Парк» на Новорижском шоссе практически завершена. В стадии активных продаж находятся поселки «Маленькая Шотландия» и «Novoрижский» в Подмосковье и жилые комплексы «Удачный» и «Сосны» в Красноярске. Также ведется реализация новых элитных проектов под брендом Villagio Estate. Поселок Park Avenue совмещает два современных формата недвижимости: таунхаусы и апартаменты; роскошные резиденции «Ренессанс Парк» возводятся в окружении векового леса; проект Futuro Park включает квартал таунхаусов с оригинальным архитектурным решением.</p>
-
-            <div>
+            <div class="text--center margin--top-large">
                 <img src="http://www.incom.ru/images/inner-real-estate_sm.png" alt="">
             </div>
         </div>
@@ -30,7 +24,6 @@
             <p class="text--h4">Смотрите также</p>
             <ul class="list list--more">
                 <li><a href="#/">История</a></li>
-                <li><a href="#/">Награды</a></li>
                 <li><a href="#/">Отзывы клиентов</a></li>
                 <li><a href="#/">Наши партнеры</a></li>
                 <li><a href="#/">Пресс-центр</a></li>
