--- a/views/company/review.html
+++ b/views/company/review.html
@@ -29,53 +29,26 @@
 
             <div class="timeline__item">
                 <div class="timeline__content">
-                    <p class="title">Спасибо Татьяне Булатовой!</p>
-                    <p>ОТ ВСЕЙ ДУШИ! СПАСИБО ТАТЬЯНЕ БУЛАТОВОЙ!!!!!! Татьяна, я Вам очень благодарна и моя благодарность не имеет границ! Желаю, что бы у Вас и у вашей семьи все было...</p>
+                    <p class="title">Спасибо!</p>
+                    <p>ОТ ВСЕЙ ДУШИ! СПАСИБО!!! Я Вам очень благодарна и моя благодарность не имеет границ! Желаю, что бы у Вас и у ваших сотрудников все было!</p>
                 </div>
             </div>
             <div class="timeline__item">
                 <div class="timeline__content">
-                    <p class="title">Хочу поблагодарить риэлтора Сухову Алю</p>
-                    <p>Добрый день! Хочу поблагодарить риэлтора (Киевское отделение), Сухову Алю. Ее профессионализму можно только позавидовать. Молодец, она все сделала отлично. Она мастер...</p>
+                    <p class="title">Хочу поблагодарить ЗемНедвижимость</p>
+                    <p>Добрый день! Хочу поблагодарить отделение по ул. Купалы. Их профессионализму можно только позавидовать. Молодцы, они все сделали отлично. </p>
                 </div>
             </div>
             <div class="timeline__item">
                 <div class="timeline__content">
-                    <p class="title">Огромная благодарность Вартаташвили Халиане Шалвовне</p>
-                    <p>Огромная благодарность команде и особенно Старшему эксперту ДО Октябрьское поле Вартаташвили Халиане Шалвовне за профессионализм, внимание и быструю и качественную работу! Всем, кто желает получить...</p>
+                    <p class="title">Огромная благодарность</p>
+                    <p>Огромная благодарность команде и особенно Старшему эксперту Андрею за профессионализм, внимание и быструю и качественную работу! Всем, кто желает получить качественную работу – обращайтесь именно сюда!</p>
                 </div>
             </div>
             <div class="timeline__item">
                 <div class="timeline__content">
-                    <p class="title">Выражаем огромную благодарность Комаровой Ларисе Николаевне</p>
-                    <p>Выражаем огромную благодарность Комаровой Ларисе Николаевне (отделение Проспект Мира). Благодаря ее суперпрофессионализму, активной работе и правильной тактике нам удалось успешно продать и купить...</p>
-                </div>
-            </div>
-
-            <div class="timeline__year"><span>2015</span></div>
-
-            <div class="timeline__item">
-                <div class="timeline__content">
-                    <p class="title">«ЗемНедвижимость» признана лучшей риэлторской компанией</p>
-                    <p>«ЗемНедвижимость» стала победителем V конкурса «Московские звезды», а также получила награду PRO Realty как лучшее агентство.</p>
-                </div>
-            </div>
-            <div class="timeline__item">
-                <div class="timeline__content">
-                    <p class="title">«ЗемНедвижимость» признана лучшей риэлторской компанией</p>
-                    <p>«ЗемНедвижимость» стала победителем V конкурса «Московские звезды», а также получила награду PRO Realty как лучшее агентство.</p>
-                </div>
-            </div>
-            <div class="timeline__item">
-                <div class="timeline__content">
-                    <p class="title">«ЗемНедвижимость» признана лучшей риэлторской компанией</p>
-                    <p>«ЗемНедвижимость» стала победителем V конкурса «Московские звезды», а также получила награду PRO Realty как лучшее агентство.</p>
-                </div>
-            </div>
-            <div class="timeline__item">
-                <div class="timeline__content">
-                    <p class="title">«ЗемНедвижимость» признана лучшей риэлторской компанией</p>
-                    <p>«ЗемНедвижимость» стала победителем V конкурса «Московские звезды», а также получила награду PRO Realty как лучшее агентство.</p>
+                    <p class="title">Выражаем огромную благодарность ЗемНедвижимость</p>
+                    <p>Выражаем огромную благодарность отделению по ул. Купалы. Благодаря их суперпрофессионализму, активной работе и правильной тактике нам удалось успешно продать и купить лучшую квартиру в Минске!</p>
                 </div>
             </div>
 
