Delete offices filter

--- a/views/offices.html
+++ b/views/offices.html
@@ -8,7 +8,7 @@
         <h1>Наши офисы и консультационные пункты</h1>
     </div>
 
-    <div class="panel panel--box panel--filter">
+    <!-- <div class="panel panel--box panel--filter">
         <ul class="list list--horizontal margin--reset grid grid--small">
             <li class="col--1-5">
                 <input type="checkbox" class="checkbox" id="name1" value="name1">
@@ -31,7 +31,7 @@
                 <label class="label--checkbox" for="name5">аренда квартир и комнат</label>
             </li>
         </ul>
-    </div>
+    </div> -->
 
     <div>
         <a href="" data-ng-click="isOpenMode = 'list'" class="button button--medium button--border" data-ng-class="{'active' : isOpenMode == 'list'}">Список</a>
