--- a/views/offices.html
+++ b/views/offices.html
@@ -4,7 +4,7 @@
         <li><span>Недвижимость</span></li>
     </ul>
 
-    <div class="panel margin--top-large">
+    <div class="panel margin--v-large">
         <h1>Наши офисы и консультационные пункты</h1>
     </div>
 
