Fixed office information

--- a/Content/less/components/button.less
+++ b/Content/less/components/button.less
@@ -117,7 +117,8 @@
         font-style: italic;
         font-family: Georgia,serif;
 
-        &:hover{
+        &:hover,
+        &.active{
             background: #055bab;
             color: #ffffff !important;
             border-bottom: 1px solid #055aab;
