--- a/Content/less/main.less
+++ b/Content/less/main.less
@@ -124,6 +124,23 @@ p{
     }
 }
 
+// *******************************************
+//                Office
+// *******************************************
+.office{
+
+    // Element 'offica__title'
+    &__title{
+        margin-left: 10px;
+        display: inline-block;
+    }
+
+    // Element 'office__img'
+    &__img{
+        display: inline-block;
+        margin-left: 10px;
+    }
+}
 
 // *******************************************
 //                Footer
