--- a/views/company/company.html
+++ b/views/company/company.html
@@ -17,7 +17,7 @@
             <p>Компания ЗемНедвижимость располагает  широкой филиальной сетью среди риэлтерских агентств — более чем 10 полноценных офисов в Минске и региональных представительств. Количество сотрудников, занятых в деятельности компании, насчитывает более сотни человек.</p>
 
             <div class="text--center margin--top-large">
-                <img src="http://www.incom.ru/images/inner-real-estate_sm.png" alt="">
+                <img src="/Content/img/company/infographic_component_01.png" alt="">
             </div>
         </div>
         <div class="col--1-4">
