--- a/views/sale-realty/flats.html
+++ b/views/sale-realty/flats.html
@@ -24,40 +24,42 @@
         </ul>
     </div>
 
-    <ul class="grid grid-col--1-5 text--center">
-        <li>
-            <a href="/uslugi/pokupka-kvartir-i-komnat/">
-                <img src="/Content/img/cat-1/icon00.png">
-                <p>Услуга <br>Купить квартиру</p>
-            </a>
-        </li>
-        <li>
-            <a href="/uslugi/prodat-kvartiru-i-komnatu/">
-                <img src="/Content/img/cat-1/icon04.png">
-                <p>Услуга <br>Продать квартиру</p>
-            </a>
-        </li>
+    <div class="panel panel--white panel--box">
+        <ul class="grid grid-col--1-5 text--center">
+            <li>
+                <a href="/uslugi/pokupka-kvartir-i-komnat/">
+                    <img src="/Content/img/cat-1/icon00.jpg">
+                    <p>Услуга <br>Купить квартиру</p>
+                </a>
+            </li>
+            <li>
+                <a href="/uslugi/prodat-kvartiru-i-komnatu/">
+                    <img src="/Content/img/cat-1/icon04.jpg">
+                    <p>Услуга <br>Продать квартиру</p>
+                </a>
+            </li>
 
-        <li>
-            <a href="/uslugi/obmen-kvartir/">
-                <img src="/Content/img/cat-1/icon02.png">
-                <p>Обмен квартир</p>
-            </a>
-        </li>
+            <li>
+                <a href="/uslugi/obmen-kvartir/">
+                    <img src="/Content/img/cat-1/icon02.jpg">
+                    <p>Обмен квартир</p>
+                </a>
+            </li>
 
-        <li>
-            <a href="/ipoteka/">
-                <img src="/Content/img/cat-1/icon03.png">
-                <p>Акции по ипотеке</p>
-            </a>
-        </li>
-        <li>
-            <a href="/offices/">
-                <img class="cr3" src="/Content/img/cat-1/offices-smaller.png">
-                <p>Наши офисы</p>
-            </a>
-        </li>
-    </ul>
+            <li>
+                <a href="/ipoteka/">
+                    <img src="/Content/img/cat-1/icon03.jpg">
+                    <p>Акции по ипотеке</p>
+                </a>
+            </li>
+            <li>
+                <a href="/offices/">
+                    <img class="cr3" src="/Content/img/cat-1/offices-smaller.jpg">
+                    <p>Наши офисы</p>
+                </a>
+            </li>
+        </ul>
+    </div>
 
     <div class="grid">
         <div class="col--1-1">
